# GSLB

./: .gitignore  README.md  __init__.py  generate_attack.py  git-filter-repo  main.py  processor.py  setup.cfg  trails.pkl  utils.py
GSL/: experiment.py  metric.py  processor.py  utils.py
GSL/data/: dataset.py  graph_dataset.py  hetero_dataset.py
GSL/encoder/: __init__.py  dagnn.py  gat.py  gcn.py  gin.py  gprgnn.py  metamodule.py  mlp.py  nodeformer_conv.py
GSL/eval/: __init__.py  eval_cls.py
GSL/learner/: __init__.py  attention_learner.py  base_learner.py  hadamard_prod_learner.py  mlp_learner.py  sparsification_learner.py
GSL/model/: __init__.py  base_gsl.py  baselines.py  gen.py  (+16 more)
configs/: baseline_config.yaml  cogsl_config.yaml  dagnn_config.yaml  gcn_config.yaml  gen_config.yaml  gprgnn_config.yaml  grcn_config.yaml  gsr_config.yaml  gtn_config.yaml  han_config.yaml  hesgsl_config.yaml  hgpsl_config.yaml  hgsl_config.yaml  idgl_config.yaml  lds_config.yaml  mlp_config.yaml  neuralsparse_config.yaml  nodeformer_config.yaml  prognn_config.yaml  ptdnet_config.yaml  slaps_config.yaml  slaps_fp_config.yaml  slaps_mlp_config.yaml  stable_config.yaml  sublime_config.yaml  vibgsl_config.yaml
data/: __init__.py  dataset.py  graph_dataset.py  hetero_dataset.py
encoder/: __init__.py  dagnn.py  gcn.py  graphsage.py
eval/: eval_cls.py
hyperparams/: idgl_hyper.yaml
learner/: full_param_learner.py  gnn_learner.py  mlp_learner.py
model/: base_gsl.py  cogsl.py  gen.py  grcn.py  hgpsl.py  hgsl.py  lds.py  nodeformer.py  prognn.py  ptdnet.py  slaps.py  sublime.py
(+12 files in other folders)
