[metadata]
name = GSLB
version = 0.1.0
author = Liang Wang
author_email = wangliang.leon20@gmail.com
description = GSLB: Graph Structure Learning Benchmark
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/GSL-Benchmark/GSLB
project_urls =
    Bug Tracker = https://github.com/GSL-Benchmark/GSLB/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
keywords =
    PyTorch
    Graph-Neural-Networks
    Graph-Structure-Learning

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.8
install_requires =
    torch >= 1.13
    dgl >= 1.1
    numpy
    scipy
    networkx
    scikit-learn
    tqdm
    ogb
    easydict
    PyYAML

[options.packages.find]
where = .